[package]
name = "tame-webpurify"
description = "Simple Rust client for the WebPurify REST API"
version = "0.1.0"
authors = [
    "Embark <opensource@embark-studios.com>",
    "Mathias Tervo <mathias.tervo@embark-studios.com>"
]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/EmbarkStudios/tame-webpurify"
repository = "https://github.com/EmbarkStudios/tame-webpurify"
categories = ["api-bindings"]
keywords = ["content-moderation"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
url = "2.3"
thiserror = "1"

## dev dependencies below
[dev-dependencies]
bytes = "1.4"
serde_json = { version = "1" }

[dev-dependencies.reqwest]
version = "0.11"
features = ["rustls-tls"]
default-features = false

[dev-dependencies.tokio]
version = "1.25"
features = ["macros", "rt-multi-thread"]
